# tibet-forge

./: LICENSE  README.md  pyproject.toml
src/tibet_forge/: __init__.py  cli.py  config.py  forge.py  mirror.py  score.py  shame.py
src/tibet_forge/scanners/: __init__.py  bloat.py  duplicate.py  quality.py  security.py
src/tibet_forge/wrappers/: __init__.py  decorator.py  injector.py
